adding hint to style page

--- a/responsive_design/reflow_example/cs4_style.css
+++ b/responsive_design/reflow_example/cs4_style.css
@@ -2,6 +2,8 @@
 TODO: 
 - Change divs to all be on a single line
 - Change responsiveness to shift blocks into a vertical line when compressed
+
+Hint: Look up media queries in responsive design
  */
 
 
