adding solution for msg app (wed group don't look)

--- a/flask/messageboard_app/templates/profile.html
+++ b/flask/messageboard_app/templates/profile.html
@@ -2,6 +2,9 @@
 
 {% block title %}{{session["username"]}}{% endblock %}
 
+{% block javascript %}
+    <script type="text/javascript" src="{{ url_for('static', filename='posting.js') }}"></script>
+{% endblock %}
 
 {% block body%}
 		
